dataset1235/2025-2/2947369575/users/2603834977/executions/1003782500_2383239197.log
== RUN (2025-09-01 23:33:13)
-- CODE: 
from math import *
pa = float(input("distancia:"))
ang = float(input("angulo:"))
angul=(radians(ang))
c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 23:32:08)
-- CODE: 
from math import *
pa=float(input("distancia:"))
ang=float(input("angulo:"))
angul=(radians(ang))
c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:32:06)
-- CODE: 
from math import *
pa=float(input("distancia:"))
ang=float(input("angulo:"))
angul=(radians(ang))
c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                 ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:33:10)
-- CODE: 
from math import *
pa = float(input("distancia:"))
ang = float(input("angulo:"))
angul=(radians(ang))
c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:35:41)
-- CODE: 
from math import *
pa = float(input("distancia:"))
sa = float(input("distancia2:"))
ang = float(input("angulo:"))
angul=(radians(ang))
c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distancia:distancia2:angulo:87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distancia:distancia2:angulo:16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distancia:distancia2:angulo:17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distancia:distancia2:angulo:1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distancia:distancia2:angulo:54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distancia:distancia2:angulo:9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 23:35:44)
-- CODE: 
from math import *
pa = float(input("distancia:"))
sa = float(input("distancia2:"))
ang = float(input("angulo:"))
angul=(radians(ang))
c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distancia:distancia2:angulo:87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distancia:distancia2:angulo:16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distancia:distancia2:angulo:17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distancia:distancia2:angulo:1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distancia:distancia2:angulo:54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distancia:distancia2:angulo:9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 23:33:11)
-- CODE: 
from math import *
pa = float(input("distancia:"))
ang = float(input("angulo:"))
angul=(radians(ang))
c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = sqrt(pa**2+sa**2-2*pa*sa*cos(angul))
                   ^^
NameError: name 'sa' is not defined. Did you mean: 'pa'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
